# toontales-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_pipeline_outbox.py  0003_real_cost.py  0004_user_password_hash.py  0005_credit_type_topup.py  0006_task_price.py  0007_spark_revaluation.py  0008_credit_transaction_note.py  0009_run_duration_price.py  0010_provider_manual_balance.py
deploy/: Caddyfile  README.md  web.Dockerfile
deploy/monitoring/: alerts.yml  prometheus.yml
deploy/scripts/: toontales-backup.sh
deploy/systemd/: toontales-api.service  toontales-beat.service  toontales-migrate.service  toontales-worker.service
frontend/admin/: README.md  index.html  package.json
frontend/web/: README.md  index.html  package.json  vite.config.ts
src/toontales_ai/: main.py
tests/integration/: conftest.py  test_admin_api.py  test_admin_balance_edit.py  test_auth_endpoints.py  test_billing.py  test_client_never_sees_cost_price.py  test_composition_ffmpeg.py  test_credit_and_duplicate_delivery.py  test_partial_rerun_join_stages.py  test_process_task_skips_terminal_run.py  test_provider_manual_balance.py  test_provider_semaphore.py  test_rate_limit.py  test_readyz.py  test_reconcile_orphaned_pending.py  test_run_status_transitions.py  test_settle_by_actual_cost.py  test_start_run_credit_check.py
tests/unit/: test_anthropic_storyboard_adapter.py  test_auth_security.py  test_dag_consistency.py  (+14 more)
(+100 files in other folders)
